# app/Http/Controllers/ProfileController.php
@@ -35,4 +35,42 @@ class ProfileController extends Controller
     {
         return $this->successResponse(['data' => ProfileResource::collection(Profile::active()->get())]);
     }
+
+        /**
+     * @OA\Get(
+     *     path="/api/all-profiles",
+     *     summary="Get all profiles",
+     *     description="Retrieve all profiles including the 'status' field. This endpoint requires authentication.",
+     *     operationId="getAllProfiles",
+     *     tags={"Profiles"},
+     *     security={{ "bearerAuth": {} }},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of all profiles with status",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(
+     *                 @OA\Property(property="id", type="integer", example=1),
+     *                 @OA\Property(property="last_name", type="string", example="Doe"),
+     *                 @OA\Property(property="first_name", type="string", example="John"),
+     *                 @OA\Property(property="image", type="string", example="/storage/images/profiles/profile1.jpg"),
+     *                 @OA\Property(property="status", type="string", example="active")
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized - Token is required",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="message", type="string", example="Unauthenticated.")
+     *         )
+     *     )
+     * )
+     */
+    public function indexAll(): JsonResponse
+    {
+        // Retrieve all profiles with the "status" field
+        return $this->successResponse(['data' => ProfileResource::collection(Profile::all())]);
+    }
+
 }
